# health-care-agentic-system

./: .gitignore  pyproject.toml  requirements.txt
HealthCareAgenticAI/: mainagent.ipynb  parkinsons_model.pkl  standscaler.pkl
