[project]
name = "agenticlanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "langsmith>=0.4.18",
    "numpy>=2.2.6",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
]
